--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -21,7 +22,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserActivity" />
 
-        <service android:name=".GpsService"/>
+        <service android:name=".GpsService" />
+        <service android:name=".AlertsService" />
     </application>
 
 </manifest>
